# fr_to_eng

./: .gitignore  README.md  french_input.txt  pyproject.toml  translated_output.txt
src/fr_to_en/: __init__.py  main.py
