[project]
name = "fr-to-en"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Salvador Guzman", email = "guzmansalv@gmail.com" }
]
dependencies = [
    "transformers==4.50.3",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "sacremoses>=0.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fr_to_en"]
